[project]
name = "aha-reaction-program"
version = "0.1.0"
description = "A sound reaction program that triggers sounds when typing specific words"
authors = [
    {name = "kimh-code"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
